Bugfix of the board's overflow - trains doesn't stretch the board anymore.

--- a/app/assets/stylesheets/visualization.sass
+++ b/app/assets/stylesheets/visualization.sass
@@ -6,6 +6,8 @@
   font-family: 'League Gothic'
   font-size: 24px
   overflow: visible
+  overflow-x: hidden
+  overflow-y: visible
   position: relative
 
   .time
